force-app/main/default/objects/InboundDefine__mdt/InboundDefine__mdt.object-meta.xml
<CustomObject>
    <label>外部调用接口定义</label>
</CustomObject>