force-app/main/default/objects/InboundDefine__mdt/fields/DataListName__c.field-meta.xml
<CustomField>
    <fullName>DataListName__c</fullName>
    <label>数据列表名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>