force-app/main/default/objects/InboundDefine__mdt/fields/EncodeType__c.field-meta.xml
<CustomField>
    <fullName>EncodeType__c</fullName>
    <label>加密/解密方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AES128</fullName>
                <default>true</default>
                <label>AES128</label>
            </value>
            <value>
                <fullName>MD5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>