force-app/main/default/objects/InboundDefine__mdt/fields/ExecuteClass__c.field-meta.xml
<CustomField>
    <fullName>ExecuteClass__c</fullName>
    <label>执行类名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>