force-app/main/default/objects/InboundDefine__mdt/fields/ExecuteInterval__c.field-meta.xml
<CustomField>
    <fullName>ExecuteInterval__c</fullName>
    <label>执行间隔时间(分钟)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>