force-app/main/default/objects/InboundDefine__mdt/fields/IntfFieldMapping__c.field-meta.xml
<CustomField>
    <fullName>IntfFieldMapping__c</fullName>
    <label>字段映射配置名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>