force-app/main/default/objects/InboundDefine__mdt/fields/IntfVerificationUrl__c.field-meta.xml
<CustomField>
    <fullName>IntfVerificationUrl__c</fullName>
    <label>接口验证地址</label>
    <length>255</length>
    <type>Text</type>
</CustomField>