force-app/main/default/objects/InboundDefine__mdt/fields/IsAutoBuildObject__c.field-meta.xml
<CustomField>
    <fullName>IsAutoBuildObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否自动构建对象</label>
    <type>Checkbox</type>
</CustomField>