force-app/main/default/objects/InboundDefine__mdt/fields/IsNeedCheckMd5__c.field-meta.xml
<CustomField>
    <fullName>IsNeedCheckMd5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否需要Md5校验</label>
    <type>Checkbox</type>
</CustomField>