force-app/main/default/objects/InboundDefine__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>秘钥</label>
    <length>255</length>
    <type>Text</type>
</CustomField>