force-app/main/default/objects/InboundDefine__mdt/fields/LogExpiryDays__c.field-meta.xml
<CustomField>
    <fullName>LogExpiryDays__c</fullName>
    <label>日志到期天数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>