force-app/main/default/objects/InboundDefine__mdt/fields/MapConfigName__c.field-meta.xml
<CustomField>
    <fullName>MapConfigName__c</fullName>
    <label>映射配置主对象名(SF)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>