force-app/main/default/objects/InboundDefine__mdt/fields/MapConfigObjectName__c.field-meta.xml
<CustomField>
    <fullName>MapConfigObjectName__c</fullName>
    <label>映射配置主对象名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>