force-app/main/default/objects/InboundDefine__mdt/fields/NeedEncode__c.field-meta.xml
<CustomField>
    <fullName>NeedEncode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>加密参数</label>
    <type>Checkbox</type>
</CustomField>