force-app/main/default/objects/InboundDefine__mdt/fields/NeedRetry__c.field-meta.xml
<CustomField>
    <fullName>NeedRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否需要重试</label>
    <type>Checkbox</type>
</CustomField>