force-app/main/default/objects/InboundDefine__mdt/fields/NoNeedBuildObject__c.field-meta.xml
<CustomField>
    <fullName>NoNeedBuildObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不需要系统构造对象</label>
    <type>Checkbox</type>
</CustomField>