force-app/main/default/objects/InboundDefine__mdt/fields/NoNeedLogin__c.field-meta.xml
<CustomField>
    <fullName>NoNeedLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不需要登录</label>
    <type>Checkbox</type>
</CustomField>