force-app/main/default/objects/InboundDefine__mdt/fields/OutboundIntfName__c.field-meta.xml
<CustomField>
    <fullName>OutboundIntfName__c</fullName>
    <label>调用外部接口名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>