force-app/main/default/objects/InboundDefine__mdt/fields/TestFailResponse__c.field-meta.xml
<CustomField>
    <fullName>TestFailResponse__c</fullName>
    <label>失败样例</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>