force-app/main/default/objects/InboundDefine__mdt/fields/TestResponse__c.field-meta.xml
<CustomField>
    <fullName>TestResponse__c</fullName>
    <label>成功样例</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>