force-app/main/default/objects/InboundDefine__mdt/listViews/AllView.listView-meta.xml
<ListView>
    <fullName>AllView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>InterfaceName__c</columns>
    <columns>ExternalSystemName__c</columns>
    <columns>ExecuteClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
    <language>zh_CN</language>
</ListView>